 * Add a new `picture` template tag for Django Templates and Jinja (Thibaud Colas)
 * Add a new `srcset_image` template tag for Django Templates and Jinja (Thibaud Colas)
 * Support `Filter` instances as input for `AbstractImage.get_renditions()` (Thibaud Colas)
 * Improve error messages for image template tags (Thibaud Colas)
 * Do not render minimap if there are no panel anchors (Sage Abdullah)
 * Fix: Ensure that StreamField's `FieldBlock`s correctly set the `required` and `aria-describedby` attributes (Storm Heg)
 * Fix: Avoid an error when the moderation panel (admin dashboard) contains both snippets and private pages (Matt Westcott)
 * Fix: When deleting collections, ensure the collection name is correctly shown in the success message (LB (Ben) Johnston)
 * Fix: Filter out comments on Page editing counts that do not correspond to a valid field / block path on the page such as when a field has been removed (Matt Westcott)
 * Fix: Allow `PublishMenuItem` to more easily support overriding its label via `construct_page_action_menu` (Sébastien Corbin)
 * Fix: Allow locale selection when creating a page at the root level (Sage Abdullah)
 * Fix: Ensure the admin login template correctly displays all `non_fields_errors` for any custom form validation (Sébastien Corbin)
 * Fix: Ensure 'mark as active' label in workflow bulk action set active form can be translated (Rohit Sharma)
 * Fix: Ensure the panel title for a user's settings correctly reflects the `WAGTAIL_EMAIL_MANAGEMENT_ENABLED` setting by not showing 'email' if disabled (Omkar Jadhav)
 * Fix: Update Spotify oEmbed provider URL parsing to resolve correctly (Dhrűv)
 * Fix: Update link colours within help blocks to meet accessible contrast requirements (Rohit Sharma)
 * Fix: Ensure the search promotions popular search terms picker correctly refers to the correct model (LB (Ben) Johnston)
 * Fix: Correctly quote non-numeric primary keys on snippet inspect view (Sage Abdullah)