@@ -15,7 +15,7 @@
 }
 
 .w-dropdown__content :where(a, button) {
-  @apply w-bg-transparent w-inline-flex w-items-center w-text-left w-font-bold w-text-text-label-menus-default w-py-3 w-px-6 w-no-underline w-transition w-outline-offset-inside;
+  @apply w-bg-transparent w-inline-flex w-items-center w-text-left w-font-bold w-text-text-label-menus-default w-py-3 w-px-6 w-no-underline w-transition w-outline-offset-inside w-w-full;
 
   .icon {
     @apply w-w-4 w-h-4 w-mr-3 w-transition w-opacity-50 w-shrink-0;
