@@ -68,6 +68,7 @@ This feature was developed by Paarth Agarwal and Thibaud Colas as part of the Go
  * Support `Filter` instances as input for [`AbstractImage.get_renditions()`](image_renditions_multiple) (Thibaud Colas)
  * Improve error messages for image template tags (Thibaud Colas)
  * Do not render minimap if there are no panel anchors (Sage Abdullah)
+ * Use dropdown buttons on listings in dashboard panels (Sage Abdullah)
 
 ### Bug fixes
 
