@@ -47,6 +47,7 @@ Changelog
  * Support `Filter` instances as input for `AbstractImage.get_renditions()` (Thibaud Colas)
  * Improve error messages for image template tags (Thibaud Colas)
  * Do not render minimap if there are no panel anchors (Sage Abdullah)
+ * Use dropdown buttons on listings in dashboard panels (Sage Abdullah)
  * Fix: Ensure that StreamField's `FieldBlock`s correctly set the `required` and `aria-describedby` attributes (Storm Heg)
  * Fix: Avoid an error when the moderation panel (admin dashboard) contains both snippets and private pages (Matt Westcott)
  * Fix: When deleting collections, ensure the collection name is correctly shown in the success message (LB (Ben) Johnston)
